<?xml version="1.0"?>
<package format="3">
  <name>cbf_controller</name>
  <version>0.0.0</version>

  <description>
    CBF controller
  </description>

  <maintainer email="utku@nyu.edu">Utku Unlu</maintainer>

  <license>BSD</license>

  <author email="utku@nyu.edu">Utku Unlu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
